--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["Dan Pittman <dan@auxon.io>"]
 edition = "2018"
 
 [dependencies]
-typenum = {git = "git://github.com/pittma/typenum", branch = "not"}
-type_bounds = {git = "git://github.com/auxoncorp/type-bounds", branch = "static" }
+#typenum = {git = "ssh://github.com/pittma/typenum", branch = "not"}
+#type_bounds = {git = "ssh://github.com/auxoncorp/type-bounds", branch = "static" }
+
+typenum = {path = "../typenum"}
+type_bounds = {path = "../type-bounds"}
