--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,5 @@ authors = ["Dan Pittman <dan@auxon.io>"]
 edition = "2018"
 
 [dependencies]
-#typenum = {git = "ssh://github.com/pittma/typenum", branch = "not"}
-#type_bounds = {git = "ssh://github.com/auxoncorp/type-bounds", branch = "static" }
-
-typenum = {path = "../typenum"}
-type_bounds = {path = "../type-bounds"}
+typenum = {git = "ssh://github.com/pittma/typenum"}
+type_bounds = {git = "ssh://github.com/auxoncorp/type-bounds"}
