--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "bounded-registers"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Dan Pittman <dan@auxon.io>"]
 edition = "2018"
-readme = "README.org"
+readme = "README.md"
 description = "A high-assurance memory-mapped register interaction library"
 repository = "https://github.com/auxoncorp/bounded-registers"
 license-file = "LICENSE"
